--- a/react_next_js/next_js_clone_coding/next-js-tutorial/next-app/package.json
+++ b/react_next_js/next_js_clone_coding/next-js-tutorial/next-app/package.json
@@ -9,9 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "^12.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
